# ammoseekr

./: .envrc.example  .gitignore  Makefile  README.md  pyproject.toml
infra/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
src/ammoseek/: consts.py  models.py  scraper.py
src/ammoseekr/: __init__.py  consts.py  main.py  models.py  scraper.py
tests/ammoseek/: test_scraper.py
tests/ammoseek/mock_data/: mock_list.json
tests/ammoseekr/: test_scraper.py
