[project]
name = "ammoseek"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
extend-select = ["B"]
select = ["I"]

[tool.uv.scripts]
start = "python -m src.ammoseek.main"
